[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picotel"
version = "0.1.0"
description = "Deliberately minimal OpenTelemetry-compatible tracing for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
